@@ -26,8 +26,9 @@ changes.  See awards.txt for more information.
 AGE=\
 Property   : Age\n\r\
 Targets    : Items, Mobs\n\r\
-Parameters : miliseconds old\n\r\
+Parameters : [MILLISECONDS]/+[# MUD HOURS]\n\r\
 Example    : 106222323232\n\r\
+Example    : +9999\n\r\
 Description: \n\r\
 The ability to age from infancy (an item) to adulthood (a mob).
 
