@@ -831,6 +831,14 @@ Example  : charge orc\n\r\
 The Barbarian runs at top speed at a target, delivering a deadly \
 attack, but sacrificing armor.
 
+SKILL_CHILDLABOR=CHILD_LABOR
+CHILDLABOR=CHILD_LABOR
+CHILD_LABOR=<ABILITY>\
+This skill gives one the unique ability to organize and coerce \
+small innocent children into helping with mundane crafting and \
+gathering skills, up to double the speed to completion.  This \
+must be done on private property with the owner present.
+
 CHIRGURY=SKILL_CHIRGURY
 CHIRURGY=SKILL_CHIRGURY
 CHIRGURY=SKILL_CHIRGURY
