@@ -28,6 +28,7 @@
  26. New Thief skill: Smuggle.  Also, laws.ini has example banned item laws.
  27. Gaolers now affect conquered area loyalty via their torture techniques.
  28. New expertise: torturing
+ 29. New skill: Child Labor, allows Gaolers to put kids to work.
 
 # Build 5.10.0 Release 9/23/2022
   1. New Scriptable functions: ROOMPC and AREAPC
